<resources>
    <string name="app_name">Event Locator</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="wrong_email_and_or_password_error">Wrong email and/or password</string>
    <string name="email_cant_be_empty_error">Email can\'t be empty</string>
    <string name="invalid_email_error">Invalid Email address</string>
    <string name="password_cant_be_empty_error">Password can\'t be empty</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="city">City</string>
    <string name="preferred_event_categories_select_all_that_apply">Preferred event categories (select all that apply)</string>
    <string name="sports">Sports</string>
    <string name="volunteering">Volunteering</string>
    <string name="entertainment">Entertainment</string>
    <string name="educational">Educational</string>
    <string name="name_contains_numbers_error">Name can\'t contain numbers</string>
    <string name="last_name_empty_error">Last name can\'t be empty</string>
    <string name="last_name_max_length_error">Last name can\'t contain more than 16 characters</string>
    <string name="first_name_empty_error">First name can\'t be empty</string>
    <string name="first_name_max_length_error">First name can\'t contain more than 16 characters</string>
    <string name="passwords_dont_match_error">Passwords don\'t match</string>
    <string name="password_length_error">Passwords must be within 8 – 16 characters</string>
    <string name="passwords_contents_error">Passwords must contain at least one letter and one number</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_events">My events</string>
    <string name="followed_organizers">Followed organizers</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="update_email">Update email</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="previous_events">Previous events</string>
    <string name="canceled_events">Canceled events</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="view_events">View events</string>
    <string name="email">Email</string>
    <string name="about_the_organizer">About the organizer</string>
    <string name="social_media_accounts">Social media accounts</string>
    <string name="description">Description</string>
    <string name="sessions">Sessions</string>
    <string name="city2">City:</string>
    <string name="location">Location:</string>
    <string name="tap_to_view_location">Tap to view location</string>
    <string name="registration_closes_on">Registration closes on:</string>
    <string name="categories">Categories</string>
    <string name="canceled_on">Canceled on:</string>
    <string name="cancellation_reason">Cancellation reason</string>
    <string name="date_s2">Date(s):</string>
    <string name="status">Status:</string>
    <string name="new_email">New email</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="online">Online</string>
    <string name="select_a_date_or_a_date_period">Select a date or a date period</string>
    <string name="date_s">Date(s)</string>
    <string name="located">Located</string>
    <string name="selected_start_date">Selected start date:</string>
    <string name="select_date">Select date</string>
    <string name="selected_end_date">Selected end date:</string>
    <string name="remove_selected_dates">Remove selected dates</string>
    <string name="event_categories">Event categories</string>
    <string name="apply">Apply</string>
    <string name="events_name_hint">Event\'s name…</string>
    <string name="organizers_name_hint">Organizer\'s name…</string>
    <string name="event_type">Event type</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="Amman">Amman</string>
    <string name="Zarqa">Al-Zarqa</string>
    <string name="Balqa">Al-Balqa</string>
    <string name="Madaba">Madaba</string>
    <string name="Irbid">Irbid</string>
    <string name="Mafraq">Al-Mafraq</string>
    <string name="Jerash">Jerash</string>
    <string name="Ajloun">Ajloun</string>
    <string name="Karak">Al-Karak</string>
    <string name="Aqaba">Al-Aqaba</string>
    <string name="Maan">Ma\'an</string>
    <string name="Tafila">Al-Tafila</string>

    <!-- TODO: Delete if not used -->
    <string name="registration_ongoing">Registration ongoing</string>
    <string name="registration_closed">Registration closed</string>
    <string name="session_happening_right_now">A session is happening right now!</string>
    <string name="active">Active</string>
    <!-- TODO: Delete if not used -->

    <string name="upcoming_events_by_followed_organizers">Upcoming events by followed organizers</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="unfollow">Unfollow</string>
    <string name="rating2">Rating:</string>
    <string name="register">Register</string>
    <string name="organized_by">Organized by:</string>
    <string name="event_full">Event is full</string>
    <string name="unregister">Unregister</string>
    <string name="search_organizers">Search organizers</string>
    <string name="show_events_whose_registration_closed">Show events whose registration closed</string>
    <string name="show_full_events">Show full events</string>
    <string name="search">Search</string>
    <string name="login_error">Wrong email/password combination</string>
    <string name="click_to_view_location">Click to view location</string>
    <string name="event_category_error">At least one category is required</string>
</resources>