<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/et_start_end_margin"
    android:layout_marginEnd="@dimen/et_start_end_margin"
    android:layout_marginTop="8dp">

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/events_name_hint"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/event_type"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/online"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cLocated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/located"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/select_a_date_or_a_date_period"/>

    <Button
        android:id="@+id/btnSelectDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_s"
        android:textSize="@dimen/button_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_start_date"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/larger_label"/>

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="@dimen/larger_label"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_end_date"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/larger_label"/>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="@dimen/larger_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRemoveDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_selected_dates"
        android:textSize="@dimen/button_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/day_of_the_week"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/event_categories"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cbEducational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/educational"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/entertainment"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbVolunteering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/volunteering"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sports"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/city"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cAmman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Amman"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cZarqa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zarqa"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cBalqa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Balqa"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cMadaba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Madaba"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cIrbid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Irbid"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cJerash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jerash"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cMafraq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mafraq"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cAjloun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ajloun"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cKarak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Karak"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cAqaba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aqaba"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cMaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Maan"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cTafila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tafila"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textSize="@dimen/button_size"/>



</LinearLayout>