<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/et_start_end_margin"
    android:layout_marginEnd="@dimen/et_start_end_margin"
    android:layout_marginTop="8dp">

    <SearchView
        android:id="@+id/svEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/events_name_hint"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="8dp"/>

    <SearchView
        android:id="@+id/svOrganizerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/organizers_name_hint"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/event_type"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/online"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cLocated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/located"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/select_a_date_or_a_date_period"/>

    <Button
        android:id="@+id/btnSelectDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_s"
        android:textSize="@dimen/button_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_start_date"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/larger_label"/>

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="@dimen/larger_label"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_end_date"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/larger_label"/>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="@dimen/larger_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRemoveDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_selected_dates"
        android:textSize="@dimen/button_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/day_of_the_week"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cdayTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/event_categories"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cbEducational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/educational"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/entertainment"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbVolunteering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/volunteering"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sports"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/larger_label"
        android:text="@string/city"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/ctemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add later"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textSize="@dimen/button_size"/>





</LinearLayout>