<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/main_button_height">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/et_start_end_margin"
                android:layout_marginEnd="@dimen/et_start_end_margin"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/btnUpdateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_size"
                    android:text="@string/update_email"
                    android:layout_marginBottom="4dp"/>

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_size"
                    android:text="@string/change_password"
                    android:layout_marginBottom="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlCityMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:hint="@string/city"
                    android:layout_marginBottom="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/acCityMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/larger_label"
                    android:text="@string/preferred_event_categories_select_all_that_apply"/>

                <TextView
                    android:id="@+id/tvEventCategoryError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_category_error"
                    android:textColor="@color/design_default_color_error" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEducational"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/educational"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEntertainment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbVolunteering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volunteering"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_height"
            android:text="@string/save_changes"
            android:textSize="@dimen/button_size"
            android:minHeight="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="invisible"
        android:layout_margin="48dp"/>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>